# Capstone_Project

./: README.md
backend/: .env.template  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
backend/app/middlewares/: passwordValidation.py
backend/migrations/: create_tables.py
backend/tests/: test_endpoints.py  test_payments.py
frontend/: .env.template  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: apiClient.ts  types.ts
frontend/src/components/: CheckoutForm.tsx  Login.tsx  ManageMaterials.tsx  ManageServices.tsx  Register.tsx  RequestQuote.tsx
frontend/src/components/forms/: ServiceForm.tsx
frontend/src/components/ui/: button.tsx  card.tsx  contact-section.tsx  design-services.tsx  dialog.tsx  hero.tsx  index.ts  machine-service.tsx  mega-menu.tsx  navigation.tsx  project-gallery.tsx  room-visualizer.tsx  service-card.tsx  service-departments.tsx  shop-by-room.tsx  team-section.tsx  tractor-illustration.tsx
frontend/src/hooks/: useBreakpoint.ts
